--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,8 @@
     <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-brand">
-        <span class="logo">🔳</span>
+```html
+```
         <span class="brand-name">Smart QR</span>
       </div>
       <div class="nav-links">
